# moos_ivp_usc

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  clean.sh  dependencies.txt  readme-usc.txt
data/fake_bio/: 1g_right_half.csv  1g_right_half_low.csv  1g_top_half.csv  4g_overlapping.csv  b2_2big.csv  b2_4g.csv  b2_5g.csv  b2_5small.csv  b2_GPsample_1.csv  bigger1.csv  bigger2.csv  oceans_data.csv  one_depth.csv  one_depth_three.csv  one_depth_two_close.csv
data/fake_bio/b2_GPsamples/: sfield_1.csv  sfield_10.csv  sfield_2.csv  sfield_3.csv  sfield_4.csv  sfield_5.csv  sfield_6.csv  sfield_7.csv  sfield_8.csv  sfield_9.csv
data/fake_bio/b2_randomGauss/: rfield_1.csv  rfield_10.csv  rfield_2.csv  rfield_3.csv  rfield_4.csv  rfield_5.csv  rfield_6.csv  rfield_7.csv  rfield_8.csv  rfield_9.csv
data/maps/: lake_arrowhead17.info  lake_arrowhead17.tif  puddingstone_all.info  puddingstone_dam.info  puddingstone_dam.tif  puddingstone_dam_extended.info  puddingstone_dam_extended.tif  puddingstone_dam_extended_with_bathy.tif  readme.txt  santa_fe17.info  santa_fe17.tif  scmi17.info  scmi_nw.tiff  usc_campus.info
docs/: readme.txt
missions/20150319_puddingstone/: ecomapper.bhv  ecomapper.moos  shoreside.moos
missions/bridge_benchtest/: launch.sh  meta_vehicle.moos  readme.txt
missions/collab_search/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pHazardPath.moos  plug_pHazardPath_ben.moos  plug_pHazardPath_tim.moos  plug_pNodeReporter.moos  plug_pShare.moos  plug_uFldHazardMgr.moos  plug_uFldHazardMgr_ben.moos  plug_uFldHazardMgr_tim.moos  plug_uTimerScript_tim.moos
missions/collab_search_3auvs/: hazards_04.txt  meta_shoreside.moos  meta_vehicle.moos  plug_pHazardPath_ben.moos  plug_pHazardPath_lou.moos  plug_pHazardPath_tim.moos  plug_uFldHazardMgr_ben.moos  plug_uFldHazardMgr_lou.moos  plug_uFldHazardMgr_tim.moos
missions/collab_search_mit/collab_search_2auvs/: plug_pHazardPath_ben.moos  plug_pHazardPath_tim.moos  plug_uFldHazardMgr_ben.moos  plug_uFldHazardMgr_tim.moos  (+1 more)
missions/iver_benchtest/: clean.sh  coordinated_spdhdgdep.moos  iver.moos  random_spdhdgdep.moos  readme.txt
missions/lab_14_baseline/: hazards_02.txt  launch.sh  meta_shoreside.moos
missions/simple-auv/: readme.txt  simple-auv.bhv  simple-auv.moos
missions/simple-auv-acomms/: launch.sh  meta_vehicle.bhv
missions/single-auv-acomms/: clean.sh  meta_vehicle.bhv
missions/xrelay_nox/: xrelay.moos
modem-msgs/: acoustic_moospoke.proto
plugs/: plug_origin_warp.moos  plug_pAcommsHandler.moos  plug_pBasicContactMgr.moos  plug_pHelmIvP.moos  plug_pLogger.moos  plug_pMarinePID.moos  plug_pMarineViewer.moos  plug_pNodeReporter.moos  plug_pShare.moos  plug_pShare_shoreside.moos  plug_uFldNodeBroker.moos  plug_uFld_shoreside.moos  plug_uProcessWatch.moos  plug_uSimBioSensor.moos  plug_uSimMarine.moos
proto/: acoustic_moospoke.proto  data.proto  data_64.proto  lamss_status.proto  msg_ids.txt  status_and_data.proto  status_and_data_64.proto  status_min.proto  surfacing_request.proto  surfacing_request_ack.proto
src/: CMakeLists.txt
src/cmake_modules/: FindLibGP.cmake
src/lib_behaviors/: BHV_OpRegionBounce.cpp  CMakeLists.txt  README
src/lib_behaviors/BHV_OpRegionBounce/: BHV_OpRegionBounce.cpp  BHV_OpRegionBounce.h  BHV_OpRegionBounceDepth.cpp  BHV_OpRegionBounceDepth.h  CMakeLists.txt
src/lib_behaviors/BHV_OpRegionBounce/doc/: BHV_OpRegionBounce.plug  BHV_OpRegionBounce_example.bhv
src/lib_behaviors/BHV_OpRegionBounce_doc/: BHV_OpRegionBounceDepth.plug
src/lib_behaviors/BHV_WaypointSpd/: BHV_WaypointSpd.cpp  BHV_WaypointSpd.h  BHV_WaypointSpd.moos  CMakeLists.txt
src/lib_behaviors/BHV_YoYo/: BHV_YoYo.cpp  BHV_YoYo.h  CMakeLists.txt
src/pAdpGP/: AdpGP.cpp  AdpGP.h  CMakeLists.txt  main.cpp  plug_pAdpGP.moos
src/pFormationWptUpdater/: CMakeLists.txt  FormationWptUpdater.cpp  FormationWptUpdater.h  main.cpp
src/pGP/: CMakeLists.txt  GP.cpp  GP.h  GraphNode.cpp  GraphNode.h  PGP.cpp  PGP.h  main.cpp  plug_pGP.moos  prerequisites.txt
src/pGP_AUV/: CMakeLists.txt  GP_AUV.cpp  GP_AUV.h  GraphNode.cpp  GraphNode.h  gen_pp.cpp  gen_pp.h  main.cpp  plug_pGP_AUV.moos  testDynWptSelection.cpp
src/pGP_AUV/test_gen_pp/: CMakeLists.txt  GraphNode.h  data.txt  gen_pp.cpp  gen_pp.h  gen_pp_test.cpp  path_vis.m
src/pHazardPath/: CMakeLists.txt  HazardPath.cpp  HazardPath.h  main.cpp  plug_pHazardPath.moos
src/pLonLatToWptUpdate/: CMakeLists.txt  LonLatToWptUpdate.cpp  LonLatToWptUpdate.h  main.cpp  plug_pLonLatToWptUpdate.moos
src/pMaxFormationWidth/: CMakeLists.txt  MaxFormationWidth.cpp  MaxFormationWidth.h  MaxFormationWidth_utils.cpp  main.cpp  plug_pMaxFormationWidth.moos
src/pNumVehicles/: CMakeLists.txt  NumVehicles.cpp  NumVehicles.h  main.cpp
src/pPositionInFormation/: CMakeLists.txt  PositionInFormation.cpp  PositionInFormation.h  PositionInFormation_utils.cpp  hungarianmethod.cpp  hungarianmethod.h  main.cpp  plug_pPositionInFormation.moos
src/pPublishAfterX/: CMakeLists.txt  PublishAfterX.cpp  PublishAfterX.h  main.cpp  plug_pPublishAfterX.moos
src/pRePublishDataPtWithNav/: CMakeLists.txt  RePublishDataPtWithNav.cpp  RePublishDataPtWithNav.h  main.cpp  plug_pRePublishDataPtWithNav.moos
src/pSamplePoints/: CMakeLists.txt  SamplePoints.cpp  SamplePoints.h  main.cpp  plug_pSamplePoints.moos
src/pSelectFormation/: CMakeLists.txt  SelectFormation.cpp  SelectFormation.h  SelectFormation_utils.cpp  main.cpp  plug_pSelectFormation.moos
src/pTemplate/: CMakeLists.txt  Template.cpp  Template.h  main.cpp  plug_pTemplate.moos
src/uFldHazardMgr/: HazardMgr.cpp  HazardMgr.h
src/uSimBioSensor/: CMakeLists.txt  DataPoint.cpp  DataPoint.h  Location.cpp  Location.h  SimBioSensor.cpp  SimBioSensor.h  main.cpp  plug_uSimBioSensor.moos  prerequisites.txt
src/utils/: CMakeLists.txt  USCutils.h  calcDxDyOperators2h.cpp  calcDxDyOperatorsStd.cpp  deg2rad.cpp  euclidDistance.cpp  getDoubleFromCommaSeparatedString.cpp  getDoubleFromNodeReport.cpp  getStringFromNodeReport.cpp  quadrant.cpp  rad2deg.cpp  trig_dx.cpp  trig_dy.cpp
(+338 files in other folders)
